--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -6,6 +6,7 @@
     "submit": "Ingresar",
     "forgot": "¿Olvidaste tu contraseña?",
     "noAccount": "¿No tienes cuenta?",
-    "register": "Regístrate"
+    "register": "Regístrate",
+    "loading": "Cargando..."
   }
 }
