--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -67,7 +67,8 @@
     "intro": {
       "student": "Find opportunities and academic resources.",
       "company": "Manage your company information and service offerings.",
-      "admin": "Manage users, roles, and system settings.",
+      "adminTFG": "Manage users, roles, and system settings.",
+      "adminLink": "Manage users, roles, and system settings.",
       "guest": "Please sign in or register to continue."
     }
   },
@@ -75,5 +76,50 @@
     "title": "Page Not Found",
     "message": "The page you are looking for does not exist.",
     "backHome": "Go back to Home"
+  },
+  "profile": {
+    "title": "My Profile",
+    "noUser": "No user logged in.",
+    "name": "Full Name",
+    "email": "Email",
+    "phone": "Phone",
+    "publications": "Publications",
+    "editInfo": "Edit Information",
+    "save": "Save",
+    "saving": "Saving...",
+    "cancel": "Cancel",
+    "updateSuccess": "Profile updated successfully!",
+    "roleNames": {
+      "student": "Student",
+      "company": "Company",
+      "adminTGF": "TFG Administrator",
+      "adminLink": "Linkage Administrator"
+    }
+  },
+  "userMgmt": {
+    "title": "User Management",
+    "searchPlaceholder": "Search by name or email…",
+    "filterAll": "All Roles",
+    "loading": "Loading users…",
+    "noResults": "No users found.",
+    "table": {
+      "name": "Name",
+      "graduation": "Graduation Date",
+      "role": "User Type",
+      "email": "Email",
+      "phone": "Phone",
+      "actions": "Actions"
+    },
+    "role": {
+      "student": "Student",
+      "company": "Company",
+      "adminTGF": "TFG Administrator",
+      "adminLink": "Linkage Administrator"
+    },
+    "actions": {
+      "delete": "Delete",
+      "graduate": "Mark Graduated"
+    },
+    "confirmDelete": "Are you sure you want to delete this user?"
   }
 }
