Add phone number to student register

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -24,6 +24,7 @@
     "name": "Full Name",
     "studentId": "Student ID",
     "email": "Email",
+    "phoneNumber": "Phone Number (Include Country Code)",
     "password": "Password",
     "submit": "Register",
     "loading": "Registering...",
