opportunity creation form component

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -61,7 +61,9 @@
     "login": "Sign In",
     "register": "Register",
     "logout": "Log Out",
-    "calendar": "Calendar"
+    "calendar": "Calendar",
+    "publications": "Publications",
+    "myInterests": "My Interests"
   },
   "home": {
     "welcome": "Welcome, {{name}}!",
