--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -127,6 +127,7 @@
     "confirmDelete": "Are you sure you want to delete this user?"
   },
   "calendar": {
+    "title": "Calendar",
     "requests": {
       "title": "Calendar Requests",
       "table": {
