Update company dashboard

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -198,6 +198,7 @@
       },
       "edit": "Edit",
       "delete": "Delete",
+      "cancel": "Cancel",
       "noData": "No opportunities found."
     }
   },
