--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -23,6 +23,8 @@
     "title": "Registro de Estudiante",
     "name": "Nombre Completo",
     "studentId": "ID de Estudiante",
+    "major": "Carrera",
+    "admissionYear": "Año de Ingreso",
     "email": "Correo Electrónico",
     "phoneNumber": "Número Telefónico (Incluye Código de País)",
     "password": "Contraseña",
@@ -36,6 +38,8 @@
     "title": "Registro de Empresa",
     "companyName": "Nombre de la Empresa",
     "sector": "Sector",
+    "address": "Dirección",
+    "logo": "Logo de la Empresa",
     "phone": "Número Telefónico",
     "email": "Correo Electrónico",
     "password": "Contraseña",
